--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.acesoft</groupId>
-    <artifactId>java-snippets</artifactId>
+    <artifactId>leetcode-snippets</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>java-snippets</name>
+    <name>leetcode-snippets</name>
     <url>http://maven.apache.org</url>
     <build>
         <plugins>
