--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,11 +16,11 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v4.1.1
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4.1.0
+      - uses: actions/checkout@v4.1.6
+      - name: Set up JDK 21
+        uses: actions/setup-java@4.2.1
         with:
-          java-version: "17"
+          java-version: "21"
           distribution: "temurin"
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
