--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.6
       - name: Set up JDK 21
-        uses: actions/setup-java@4.2.1
+        uses: actions/setup-java@v4.2.1
         with:
           java-version: "21"
           distribution: "temurin"
